--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "handlebars": "^4.7.7",
+    "https": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "qs": "^6.10.1",
+    "querystring": "^0.2.1"
   }
 }
