--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,8 @@ Thumbs.db
 *.mov
 *.wmv
 
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
