--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "excel4node": "^1.7.2",
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "handlebars": "^4.7.7",
@@ -28,6 +29,8 @@
     "qs": "^6.10.1",
     "querystring": "^0.2.1",
     "razorpay": "^2.8.0",
-    "shortid": "^2.2.16"
+    "save": "^2.5.0",
+    "shortid": "^2.2.16",
+    "xlsx": "^0.18.5"
   }
 }
