--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-heroku config:set DATABASE_URL ="mongodb+srv://rekonnect:FSjWHvDnMIcPC9He@cluster0.fk6rnne.mongodb.net/test"
+DATABASE_URL ="mongodb+srv://rekonnect:FSjWHvDnMIcPC9He@cluster0.fk6rnne.mongodb.net/test"
